# lask-lm

./: .gitignore  .mcp.json  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  lask.config.yaml  main.lask.py  pyproject.toml  test_e2e.py
.lask/layers/22a2c6fa0f6fc16960ab28f705a3e039e06b38f348fcd3c2439b9e11993325a9/: layer-chain.json
.lask/layers/a96d5147d6299dbd830ebf75005c0910d09c2af1907964ca9e5f1abafb3c56dd/: layer-chain.json
.lask/response-cache/: 1bdf760b395ce3e45c41f2b2692e9039019409aa8f700053413ae199c4d72e4f_acc59fb3bfdae994d4be7847874153693d2a684dbbae277cc34b55ba35313bfd_0.json  d644cb50b5ad4ee770d7b3c9e839cd97db70bda3dde3971f5356de786636ebcf_d28cba0272289d26dc85be30f054cb5123617d6fce3a592212fe8842d42626ae_0.json
src/lask_lm/: __init__.py  main.py  mcp_server.py
src/lask_lm/agents/: __init__.py
src/lask_lm/agents/implement/: __init__.py  graph.py  nodes.py  parallel_graph.py  prompts.py  schemas.py  validation.py
src/lask_lm/models/: __init__.py  core.py
src/lask_lm/tools/: __init__.py
tests/: __init__.py  test_comment_syntax.py  test_contract_grounding.py  test_contract_signature_consistency.py  test_contract_validation.py  test_existing_lask_prompts.py  test_graph_compatibility.py  test_grouped_output.py  test_parallel_graph.py
