[project]
name = "lask-lm"
version = "0.1.0"
description = "LangGraph agents for generating LASK-compatible source files"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lask_lm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
